Inclusão classe de testes pacote ms-logistica-entrega e testes parciais no pacote ms-gestao-pedido